# Verarte-Fabi-Faria

./: README.md
verarte-back-end/: .env  Dockerfile  compose.yml  pyproject.toml  start_server.py
verarte-back-end/app/: config.py  database_config.py  main.py  utils.py
verarte-back-end/app/products/: model_product.py  routes_product.py  schemas_product.py
verarte-back-end/app/users/admin/: model_admin.py  routes_admin.py  schemas_admin.py
verarte-back-end/app/users/auth/: dependencies_auth.py  email_resend.py  hash_passwords.py  jwt_handler.py  login_routes.py  password_reset.py  schemas_auth.py
verarte-back-end/app/users/buyer/: model_buyer.py  routes_buyer.py  schemas_buyer.py
verarte-back-end/migrations/models/: 0_20260204203342_init.py  1_20260208141238_update.py
verarte-front-end/: index.html  package-lock.json  package.json  tailwind.config.js
verarte-front-end/src/: App.tsx  index.css
verarte-front-end/src/components/: Footer.tsx  Header.tsx  PaymentModal.tsx  ProductCard.tsx
verarte-front-end/src/pages/: Admin.tsx  ForgotPassword.tsx  Home.tsx  Login.tsx  Register.tsx
